LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Budget__c/Campaign_Budget__c.object-meta.xml
<CustomObject>
    <label>Campaign Budget</label>
    <nameField>
        <label>Campaign Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>