LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Budget__c/fields/Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget__c</fullName>
    <label>Annual Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>