LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Budget__c/fields/WCGTProjectID__c.field-meta.xml
<CustomField>
    <fullName>WCGTProjectID__c</fullName>
    <externalId>true</externalId>
    <label>WCGTProjectID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>