LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Annual_Budget__c</columns>
    <columns>Remaining_Budget__c</columns>
    <columns>Financial_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>